[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Root.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TaskView.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Add.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Edit.gd" type="Script" id=4]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Task View" type="VBoxContainer" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Task View"]
margin_right = 1016.0
margin_bottom = 22.0

[node name="Add" type="ToolButton" parent="Panel/TabContainer/Task View/HBoxContainer"]
margin_right = 37.0
margin_bottom = 22.0
text = "Add"
script = ExtResource( 3 )

[node name="Edit" type="ToolButton" parent="Panel/TabContainer/Task View/HBoxContainer"]
margin_left = 41.0
margin_right = 77.0
margin_bottom = 22.0
text = "Edit"
script = ExtResource( 4 )

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/TabContainer/Task View"]
margin_top = 26.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="TasksTree" type="Tree" parent="Panel/TabContainer/Task View/HSplitContainer"]
margin_right = 804.0
margin_bottom = 538.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
columns = 2
column_titles_visible = true
hide_root = true
select_mode = 2

[node name="TagsTree" type="Tree" parent="Panel/TabContainer/Task View/HSplitContainer"]
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 538.0
rect_min_size = Vector2( 200, 0 )
hide_root = true
select_mode = 2

[node name="Timer" type="Timer" parent="Panel/TabContainer/Task View"]
wait_time = 0.25
autostart = true

[connection signal="on_tasks_loaded" from="." to="Panel/TabContainer/Task View" method="_on_Root_on_tasks_loaded"]
[connection signal="button_up" from="Panel/TabContainer/Task View/HBoxContainer/Add" to="Panel/TabContainer/Task View/HBoxContainer/Add" method="_on_Add_button_up"]
[connection signal="button_up" from="Panel/TabContainer/Task View/HBoxContainer/Edit" to="Panel/TabContainer/Task View/HBoxContainer/Edit" method="_on_Edit_button_up"]
[connection signal="gui_input" from="Panel/TabContainer/Task View/HSplitContainer/TasksTree" to="Panel/TabContainer/Task View" method="_on_Tasks_gui_input"]
[connection signal="item_activated" from="Panel/TabContainer/Task View/HSplitContainer/TasksTree" to="Panel/TabContainer/Task View" method="_on_TasksTree_item_activated"]
[connection signal="timeout" from="Panel/TabContainer/Task View/Timer" to="Panel/TabContainer/Task View" method="_on_Timer_timeout"]
